# projeto-bot-discord

./: README.md  config.py  main.py  pyproject.toml
